# vendor-management-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-requirements.txt  env.example  pyproject.toml  setup.cfg
src/docs/order/: endpoints.md
src/exceptions/: base.py
src/history/: admin.py  apps.py  models.py  serializers.py  signals.py  utils.py
src/history/migrations/: 0001_initial.py  0002_alter_historicalperformance_date_and_more.py
src/order/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
src/order/migrations/: 0001_initial.py  0002_alter_purchaseorder_id.py  0003_alter_purchaseorder_po_number.py
src/vendor_management_system/: settings.py  urls.py
src/viewset/: base.py
